@@ -3,13 +3,12 @@ Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
-Build-Depends: appstream-util,
-               debhelper-compat (= 13),
+Build-Depends: debhelper-compat (= 13),
                docbook-xsl,
                gnome-pkg-tools (>= 0.10),
                gsettings-desktop-schemas-dev (>= 3.18),
                gtk-doc-tools,
-               libappstream-glib-dev (>= 0.7.14),
+               libappstream-dev (>= 0.14.0),
                libflatpak-dev (>= 1.0.4) [amd64 arm64 armel armhf i386 mips mipsel mips64el ppc64el s390x hppa powerpc powerpcspe ppc64],
                libfwupd-dev (>= 1.0.3) [linux-any],
                libglib2.0-dev (>= 2.56.0),
@@ -18,6 +17,7 @@ Build-Depends: appstream-util,
                libgspell-1-dev,
                libgtk-3-dev (>= 3.22.4),
                libgudev-1.0-dev [linux-any],
+               libhandy-1-dev (>= 1.0.2),
                libjson-glib-dev (>= 1.2.0),
                libostree-dev [linux-any],
                libmalcontent-0-dev [amd64 arm64 armel armhf i386 mips mipsel mips64el ppc64el s390x hppa powerpc powerpcspe ppc64],
@@ -32,8 +32,7 @@ Build-Depends: appstream-util,
                policykit-1,
                valgrind [amd64 arm64 armhf i386 mips mips64 mips64el mipsel powerpc ppc64 ppc64el s390x],
                xsltproc
-Build-Depends-Indep: appstream-glib-doc <!nodoc>,
-                     libgdk-pixbuf2.0-doc <!nodoc>,
+Build-Depends-Indep: libgdk-pixbuf2.0-doc <!nodoc>,
                      libglib2.0-doc <!nodoc>,
                      libgtk-3-doc <!nodoc>,
                      libjson-glib-doc <!nodoc>,
