@@ -7,7 +7,7 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,-O1 -Wl,--as-needed
 export DEB_LDFLAGS_MAINT_STRIP := -Wl,-Bsymbolic-functions
 
 GS_CONFIGURE_FLAGS = \
-	-Dgnome_desktop=true \
+	-Dgsettings_desktop_schemas=enabled \
 	-Dodrs=true \
 	-Dostree=false \
 	-Dpackagekit=true \
